--- a/templates/Fiscal/emissaoNFe/form.html.twig
+++ b/templates/Fiscal/emissaoNFe/form.html.twig
@@ -45,6 +45,8 @@
 
             {% form_theme form 'bootstrap_4_horizontal_layout.html.twig' %}
 
+            {{ form_start(form) }}
+
             <div class="tab-content" id="myTabContent">
 
                 {{ include('Fiscal/emissaoNFe/form_cabecalho.html.twig') }}
