Fornecedor (list+form)

--- a/templates/mainmenu.html.twig
+++ b/templates/mainmenu.html.twig
@@ -115,7 +115,7 @@
                 </a>
                 <ul class="nav-dropdown-items" style="background-color: black">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('est_fornecedor_list') }}">
                             <i class="nav-icon fas fa-truck"></i>Fornecedores</a></li>
 
                     <li class="nav-item">
