Iniciando com Financeiro... Movimentacao

--- a/templates/Financeiro/movimentacaoForm.html.twig
+++ b/templates/Financeiro/movimentacaoForm.html.twig
@@ -14,7 +14,7 @@
 			</div>
 			<div class="col-4 text-right">
 				<button type="button" class="btn btn-secondary"
-					onclick="window.location.href='{{ url('movimentacao_list') }}'">
+					onclick="window.location.href='{{ url('fin_movimentacao_list') }}'">
 					<i class="fas fa-sync" aria-hidden="true"></i> Listar
 				</button>
 			</div>
@@ -36,7 +36,7 @@
 				</button>
 
 				<button type="button" value="Resetar" class="btn btn-secondary"
-					data-url="{{ url('movimentacao_form') }}"
+					data-url="{{ url('fin_movimentacao_form') }}"
 					data-target="#confirmationModal" data-toggle="modal">
 					<i class="fas fa-undo" aria-hidden="true"></i> Recarregar
 				</button>
