--- a/templates/mainmenu.html.twig
+++ b/templates/mainmenu.html.twig
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="{{ url('fin_modo_list') }}">
                             <i class="nav-icon fas fa-list-ol"></i>Extratos</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('fin_movimentacao_list') }}">
                             <i class="nav-icon fas fa-search-dollar"></i>Pesquisar</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('fin_modo_list') }}">
