--- a/templates/Financeiro/movimentacaoList.html.twig
+++ b/templates/Financeiro/movimentacaoList.html.twig
@@ -1,211 +1,114 @@
-{% extends 'index.html.twig' %}
+{% extends 'list.html.twig' %}
 
 
+{% set titulo = 'Movimentações' %}
+{% set route_form = 'fin_movimentacao_form' %}
+{% set route_list = 'fin_movimentacao_list' %}
+{% set route_list_ajax = 'fin_movimentacao_datatablesJsList' %}
+{% set list_id = 'movimentacaoList' %}
 
+{% set campos_pesquisar %}
 
-{% block page_content %}
+    <div class="form-group">
+        <label for="p_descricao">Descrição</label>
+        <input type="text" class="form-control" id="filter[descricao]" name="filter[descricao]"
+               value="{{ filter.descricao|default('') }}">
+    </div>
+    <div class="form-group">
+        <label>Data</label>
+        <div class="row">
+            <div class="col">
+                <input type="date" size="15" class="form-control" name="filter[dtUtil][i]"
+                       value="{{ filter.dtUtil.i|default('') }}">
+            </div>
+            <div class="col">
+                <input type="date" size="15" class="form-control" name="filter[dtUtil][f]"
+                       value="{{ filter.dtUtil.f|default('') }}">
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label>Valor</label>
+        <div class="row">
+            <div class="col">
+                <input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][i]"
+                       value="{{ filter.valorTotal.i|default('') }}">
+            </div>
+            <div class="col">
+                <input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][f]"
+                       value="{{ filter.valorTotal.f|default('') }}">
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <fieldset class="form-group pre-scrollable" style="height: 150px">
+            <legend>Carteiras</legend>
+            {% for carteira in filterChoices.carteiras %}
+                {% set checked = ((filter is defined) and (filter.carteira is defined) and (carteira.id in filter.carteira)) ? 'checked' : '' %}
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="{{ carteira.id }}" {{ checked }}
+                           name="filter[carteira][]">
+                    <label class="form-check-label">
+                        {{ "%03d"|format(carteira.codigo) }}
+                        -
+                        {{ carteira.descricao }}
+                    </label>
+                </div>
+            {% endfor %}
+        </fieldset>
+    </div>
 
+    <div class="form-group">
+        <fieldset class="form-group pre-scrollable" style="height: 150px">
+            <legend>Status</legend>
+            {% for status in filterChoices.status %}
+                {% set checked = ((filter is defined) and (filter.status is defined) and (status.sigla in filter.status)) ? 'checked' : '' %}
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="{{ status.sigla }}" {{ checked }}
+                           name="filter[status][]">
+                    <label class="form-check-label">
+                        {{ status.label }}
+                    </label>
+                </div>
+            {% endfor %}
+        </fieldset>
+    </div>
 
-<div class="card">
-	<div class="card-header">
+    <div class="form-group">
+        <fieldset class="form-group pre-scrollable" style="height: 150px">
+            <legend>Modo</legend>
+            {% for modo in filterChoices.modos %}
+                {% set checked = ((filter is defined) and (filter.modo is defined) and (modo.id in filter.modo)) ? 'checked' : '' %}
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="{{ modo.id }}" {{ checked }}
+                           name="filter[modo][]">
+                    <label class="form-check-label">
+                        {{ modo.descricao }}
+                    </label>
+                </div>
+            {% endfor %}
+        </fieldset>
+    </div>
 
-		<div class="row">
-			<div class="col-4">
-				<h3>Movimentações</h3>
-			</div>
-			<div class="col-8 text-right">
-				<button type="button" class="btn btn-primary" onclick="window.location.href='{{ url('movimentacao_form') }}'">
-					<i class="fas fa-file" aria-hidden="true"></i> Novo
-				</button>
-				<button type="button" class="btn btn-secondary" data-target="#pesquisarModal" data-toggle="modal">
-					<i class="fas fa-search" aria-hidden="true"></i> Pesquisar
-				</button>
-				<button type="button" class="btn btn-secondary" onclick="window.location.href='{{ url('movimentacao_list') }}'">
-					<i class="fas fa-sync" aria-hidden="true"></i> Recarregar
-				</button>
-			</div>
-		</div>
+    <div class="form-group">
+        <fieldset class="form-group pre-scrollable" style="height: 150px">
+            <legend>Categoria</legend>
+            {% for categoria in filterChoices.categorias %}
+                {% set checked = ((filter is defined) and (filter.categoria is defined) and (categoria.id in filter.categoria)) ? 'checked' : '' %}
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="{{ categoria.id }}" {{ checked }}
+                           name="filter[categoria][]">
+                    <label class="form-check-label">
+                        {{ categoria.descricaoMontada }}
+                    </label>
+                </div>
+            {% endfor %}
+        </fieldset>
+    </div>
 
-	</div>
-
-	<div class="card-body">
-
-
-		<div class="table-responsive-sm">
-			<table class="table table-striped table-hover crsr-datatable">
-
-				<thead>
-					<tr>
-						<th scope="col">Código</th>
-						<th scope="col">Status<br />Modo
-						</th>
-						<th scope="col">Categoria<br /> Carteira
-						</th>
-						<th scope="col">Descrição</th>
-						<th scope="col">Dt Útil</th>
-						<th scope="col">Valor</th>
-						<th scope="col"></th>
-					</tr>
-				</thead>
-
-				<tbody>
-					{% for item in dados %}
-					<tr>
-						<td>{{ item.id }}</td>
-						<td>{{ item.status }}<br /> {{ item.modo.descricao }}</td>
-						<td>{{ item.categoria.codigoM ~ ' - ' ~ item.categoria.descricao }}<br /> {{ item.carteira.descricao }}</td>
-						<td>{{ item.descricao }}</td>
-						<td>{{ item.dtUtil|date('d/m/Y') }}</td>
-						<td class="text-right {{ item.categoria.codigo|first == '1' ? 'table-success' : 'table-danger' }}">{{ item.valorTotal|number_format(2,',','.') }}</td>
-						<td class="text-right">
-							<button type="button" class="btn btn-primary" onclick="window.location.href='{{ url('movimentacao_form', {id: item.id}) }}'">
-								<i class="fas fa-wrench" aria-hidden="true"></i>
-							</button>
-
-							<button type="button" class="btn btn-danger" data-url="{{ url('movimentacao_delete', {id: item.id}) }}"
-								data-token="{{ csrf_token('delete') }}" data-target="#confirmationModal" data-toggle="modal">
-								<i class="fa fa-trash" aria-hidden="true"></i>
-							</button>
-						</td>
-					</tr>
-					{% endfor %}
-				</tbody>
-
-			</table>
-		</div>
-	</div>
-</div>
-
-
-<div class="modal fade" id="pesquisarModal" tabindex="-1">
-	<div class="modal-dialog modal-dialog-centered">
-		<div class="modal-content">
-			<form action="{{ url('movimentacao_list') }}" method="get">
-				<div class="modal-body">
-					<h4>Pesquisar</h4>
-
-					<div class="form-group">
-						<label for="p_descricao">Descrição</label>
-						<input type="text" class="form-control" id="filter[descricao]" name="filter[descricao]" value="{{ filter.descricao|default('') }}">
-					</div>
-					<div class="form-group">
-						<label>Data</label>
-						<div class="row">
-							<div class="col">
-								<input type="date" size="15" class="form-control" name="filter[dtUtil][i]" value="{{ filter.dtUtil.i|default('') }}">
-							</div>
-							<div class="col">
-								<input type="date" size="15" class="form-control" name="filter[dtUtil][f]" value="{{ filter.dtUtil.f|default('') }}">
-							</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<label>Valor</label>
-						<div class="row">
-							<div class="col">
-								<input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][i]"
-									value="{{ filter.valorTotal.i|default('') }}">
-							</div>
-							<div class="col">
-								<input type="text" size="15" class="form-control crsr-money" name="filter[valorTotal][f]"
-									value="{{ filter.valorTotal.f|default('') }}">
-							</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<fieldset class="form-group pre-scrollable" style="height: 150px">
-							<legend>Carteiras</legend>
-							{% for carteira in filterDatas.carteiras %}
-							{% 
-                               set checked = ((filter is defined) and (filter.carteira is defined) and (carteira.id in filter.carteira)) ? 'checked' : ''
-							%}
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="{{ carteira.id }}" {{ checked }} name="filter[carteira][]">
-								<label class="form-check-label">
-									{{ "%03d"|format(carteira.codigo) }}
-									-
-									{{ carteira.descricao }}
-								</label>
-							</div>
-							{% endfor %}
-						</fieldset>
-					</div>
-
-					<div class="form-group">
-						<fieldset class="form-group pre-scrollable" style="height: 150px">
-							<legend>Status</legend>
-							{% for status in filterDatas.status %}
-							{% 
-                               set checked = ((filter is defined) and (filter.status is defined) and (status.sigla in filter.status)) ? 'checked' : ''
-							%}
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="{{ status.sigla }}" {{ checked }} name="filter[status][]">
-								<label class="form-check-label">
-									{{ status.label }}
-								</label>
-							</div>
-							{% endfor %}
-						</fieldset>
-					</div>
-
-					<div class="form-group">
-						<fieldset class="form-group pre-scrollable" style="height: 150px">
-							<legend>Modo</legend>
-							{% for modo in filterDatas.modos %}
-							{% 
-                               set checked = ((filter is defined) and (filter.modo is defined) and (modo.id in filter.modo)) ? 'checked' : ''
-							%}
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="{{ modo.id }}" {{ checked }} name="filter[modo][]">
-								<label class="form-check-label">
-									{{ modo.descricao }}
-								</label>
-							</div>
-							{% endfor %}
-						</fieldset>
-					</div>
-					
-					<div class="form-group">
-						<fieldset class="form-group pre-scrollable" style="height: 150px">
-							<legend>Categoria</legend>
-							{% for categoria in filterDatas.categorias %}
-							{% 
-                               set checked = ((filter is defined) and (filter.categoria is defined) and (categoria.id in filter.categoria)) ? 'checked' : ''
-							%}
-							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="{{ categoria.id }}" {{ checked }} name="filter[categoria][]">
-								<label class="form-check-label">
-									{{ categoria.descricaoMontada }}
-								</label>
-							</div>
-							{% endfor %}
-						</fieldset>
-					</div>
-
-
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" id="btnCancelarPesquisa" data-dismiss="modal">
-						<i class="fa fa-ban" aria-hidden="true"></i> Cancelar
-					</button>
-					<button type="submit" class="btn btn-danger" id="btnPesquisar">
-						<i class="fa fa-trash" aria-hidden="true"></i> Pesquisar
-					</button>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-
-
-
-{% endblock %}
-
+{% endset %}
 
 
 {% block down_scripts %}
-
-
-
-
+    <script src="{{ asset('build/fin/movimentacaoList.js') }}"></script>
 {% endblock %}
