--- a/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
+++ b/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
@@ -68,6 +68,7 @@
     {{ form_row(form.indicador_forma_pagto) }}
 
     {{ form_row(form.info_compl) }}
+    {{ form_row(form.a03idNfReferenciada) }}
 
 
 
