Corrigindo bug em emissão fiscal por PV, e outros...

--- a/templates/Financeiro/movimentacaoExtratoList.html.twig
+++ b/templates/Financeiro/movimentacaoExtratoList.html.twig
@@ -83,7 +83,7 @@
                                 </td>
                             </tr>
                         {% endfor %}
-                        <tr>
+                        <tr style="background-color: lightgrey">
                             <th scope="row" colspan="7" class="text-right">
                                 Saldo em {{ dia.dtUtil|date('d/m/Y') }}: R$ 1.234,56<br/>
                                 Saldo (+ cheques) em {{ dia.dtUtil|date('d/m/Y') }}: R$ 1.234,56
