Mais em Financeiro...

--- a/templates/Fiscal/emissaoFiscalPV/ini.html.twig
+++ b/templates/Fiscal/emissaoFiscalPV/ini.html.twig
@@ -52,7 +52,7 @@ $(document).ready(function() {
 	$('#pv').keypress(function (e) {
 	  if (e.which == 13) {
 	    $('#carregar').click();
-	    return false;    //<---- Add this line
+	    return false;
 	  }
 	});
 	
