--- a/templates/mainmenu.html.twig
+++ b/templates/mainmenu.html.twig
@@ -35,7 +35,7 @@
                             <i class="nav-icon fas fa-chart-line"></i>Dashboard</a></li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('fin_movimentacao_import') }}">
                             <i class="nav-icon fas fa-file-import"></i>Importação</a></li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('fin_modo_list') }}">
