--- a/templates/Financeiro/movimentacaoExtratoList.html.twig
+++ b/templates/Financeiro/movimentacaoExtratoList.html.twig
@@ -17,24 +17,38 @@
 
                     <form action="{{ url('fin_movimentacao_extrato') }}" method="get" id="formPesquisar">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item active">
-                                        <select id="filter[carteira]" name="filter[carteira]" class="form-control">
-                                            {{ carteira.options|raw }}
-                                        </select>
-                                    </li>
-                                </ul>
 
-                                <input type="date" size="15" class="form-control" name="filter[dtUtil][i]"
-                                       style="width: 150px; float: left"
-                                       value="{{ filter.dtUtil.i|default('') }}">
-                                <input type="date" size="15" class="form-control" name="filter[dtUtil][f]"
-                                       style="width: 150px; float: left"
-                                       value="{{ filter.dtUtil.f|default('') }}">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                    <select id="filter_carteira" name="filter[carteira]" class="form-control">
+                                        {{ carteira.options|raw }}
+                                    </select>
+                                </li>
+                            </ul>
 
-                            </div>
+                            <button class="btn btn-outline-success my-2 my-sm-0 mr-1"
+                                    type="button" id="btn_ante"
+                                    data-ante-periodoi="{{ antePeriodoI }}" data-ante-periodof="{{ antePeriodoF }}"><i
+                                        class="fas fa-chevron-left"></i></button>
+                            <button class="btn btn-outline-success my-2 my-sm-0 mr-1"
+                                    type="button" id="btn_prox"
+                                    data-prox-periodoi="{{ proxPeriodoI }}" data-prox-periodof="{{ proxPeriodoF }}"><i
+                                        class="fas fa-chevron-right"></i></button>
+
+
+                            <input type="date" size="15" class="form-control" id="filter_dtUtil_i"
+                                   name="filter[dtUtil][i]"
+                                   style="width: 150px; float: left"
+                                   value="{{ filter.dtUtil.i|default('') }}">
+                            <input type="date" size="15" class="form-control mr-1" id="filter_dtUtil_f"
+                                   name="filter[dtUtil][f]"
+                                   style="width: 150px; float: left"
+                                   value="{{ filter.dtUtil.f|default('') }}">
+
+                            <button class="btn btn-outline-success my-2 my-sm-0 mr-1" type="submit">Pesquisar</button>
+                            <button class="btn btn-outline-dark my-2 my-sm-0" type="button" id="btn_hoje">Hoje</button>
+
+
                         </nav>
                     </form>
 
@@ -46,12 +60,105 @@
         <div class="card-body">
 
             <div class="table-responsive-sm">
+
+                <div id="accordion">
+                    <div class="card">
+                        <div class="card-header" id="headingOne">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
+                                        aria-expanded="true" aria-controls="collapseOne">
+                                    Anteriores
+                                </button>
+                            </h5>
+                        </div>
+
+                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                             data-parent="#accordion">
+                            <div class="card-body">
+
+                                <table class="table table-striped table-hover crsr-datatable">
+
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Id</th>
+                                        <th scope="col">Categoria<br/>Modo</th>
+                                        <th scope="col">Descrição</th>
+                                        <th scope="col">Dt Vencto</th>
+                                        <th scope="col">Dt Pagto</th>
+                                        <th scope="col">Valor Total</th>
+                                        <th scope="col">Alterado em</th>
+                                        <th scope="col"></th>
+                                    </tr>
+                                    </thead>
+
+                                    <tbody>
+                                    {% for item in anteriores.movs %}
+                                        <tr style="color: {{ item.categoria.codigo[0:1] == '1' ? 'blue' : 'red' }}">
+                                            <th scope="row">{{ loop.index }}</th>
+                                            <td>{{ item.id }}</td>
+                                            <td>
+                                                {{ item.categoria.descricaoMontada }}<br/>
+                                                {{ "%02d"|format(item.modo.codigo) }}
+                                                - {{ item.modo.descricao|default('') }}
+                                            </td>
+                                            <td>
+                                                <div style="float: left">
+                                                    {{ item.descricaoMontada|nl2br }}
+                                                </div>
+                                                {% if item.parcelamento %}
+                                                    <div class="text-right">
+                                                        <button type="button" class="btn btn-primary"
+                                                                onclick="window.location.href='{{ url('fin_movimentacao_listParcelamento', {parcelamento: item.parcelamento.id}) }}'">
+                                                            <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+                                                        </button>
+                                                    </div>
+                                                {% endif %}
+                                            </td>
+                                            <td>{{ item.dtVencto|date('d/m/Y') }}</td>
+                                            <td>{{ item.dtPagto|date('d/m/Y') }}</td>
+                                            <td class="text-right">{{ item.valorTotal|number_format(2,',','.') }}</td>
+                                            <td>{{ item.updated|date('d/m/Y H:i:s') }}</td>
+                                            <td class="text-right">
+                                                <button type="button" class="btn btn-primary"
+                                                        onclick="window.location.href='{{ url('fin_movimentacao_form', {id: item.id}) }}'">
+                                                    <i class="fas fa-wrench" aria-hidden="true"></i>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <table class="table table-striped table-hover crsr-datatable">
 
                     <thead>
+                    <tr style="background-color: lightgrey">
+                        <th scope="row" colspan="7" class="text-right">
+                            Saldo anterior:
+                            R$ {{ anteriores.saldos.SALDO_POSTERIOR_REALIZADAS|number_format(2,',','.') }}<br/>
+                            Saldo anterior (+ cheques):
+                            R$ {{ anteriores.saldos.SALDO_POSTERIOR_COM_CHEQUES|number_format(2,',','.') }}
+                        </th>
+                        <td/>
+                        <td class="text-right">
+                            <button type="button" class="btn btn-primary"
+                                    onclick="window.location.href='{{ url('fin_movimentacao_form') }}'">
+                                <i class="fas fa-sigma" aria-hidden="true"></i>
+                            </button>
+                        </td>
+                    </tr>
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Id</th>
+                        <th scope="col">Status</th>
                         <th scope="col">Categoria<br/>Modo</th>
                         <th scope="col">Descrição</th>
                         <th scope="col">Dt Vencto</th>
@@ -68,9 +175,24 @@
                             <tr style="color: {{ item.categoria.codigo[0:1] == '1' ? 'blue' : 'red' }}">
                                 <th scope="row">{{ loop.index }}</th>
                                 <td>{{ item.id }}</td>
-                                <td>{{ item.categoria.codigo|default('') }}
-                                    - {{ item.categoria.descricao|default('') }}</td>
-                                <td>{{ item.descricao|default('') }}</td>
+                                <td><i class="{{ item.statusIcone }}"></i></td>
+                                <td>
+                                    {{ item.categoria.descricaoMontada }}<br/>
+                                    {{ "%02d"|format(item.modo.codigo) }} - {{ item.modo.descricao|default('') }}
+                                </td>
+                                <td>
+                                    <div style="float: left">
+                                    {{ item.descricaoMontada|nl2br }}
+                                    </div>
+                                    {% if item.parcelamento %}
+                                        <div class="text-right">
+                                            <button type="button" class="btn btn-primary"
+                                                    onclick="window.location.href='{{ url('fin_movimentacao_listParcelamento', {parcelamento: item.parcelamento.id}) }}'">
+                                                <i class="fas fa-ellipsis-h" aria-hidden="true"></i>
+                                            </button>
+                                        </div>
+                                    {% endif %}
+                                </td>
                                 <td>{{ item.dtVencto|date('d/m/Y') }}</td>
                                 <td>{{ item.dtPagto|date('d/m/Y') }}</td>
                                 <td class="text-right">{{ item.valorTotal|number_format(2,',','.') }}</td>
@@ -84,9 +206,11 @@
                             </tr>
                         {% endfor %}
                         <tr style="background-color: lightgrey">
-                            <th scope="row" colspan="7" class="text-right">
-                                Saldo em {{ dia.dtUtil|date('d/m/Y') }}: R$ 1.234,56<br/>
-                                Saldo (+ cheques) em {{ dia.dtUtil|date('d/m/Y') }}: R$ 1.234,56
+                            <th scope="row" colspan="8" class="text-right">
+                                Saldo em {{ dia.dtUtil|date('d/m/Y') }}:
+                                R$ {{ dia.saldos.SALDO_POSTERIOR_REALIZADAS|number_format(2,',','.') }}<br/>
+                                Saldo (+ cheques) em {{ dia.dtUtil|date('d/m/Y') }}:
+                                R$ {{ dia.saldos.SALDO_POSTERIOR_COM_CHEQUES|number_format(2,',','.') }}
                             </th>
                             <td/>
                             <td class="text-right">
@@ -108,3 +232,6 @@
 {% endblock %}
 
 
+{% block down_scripts %}
+    <script src="{{ asset('build/fin/movimentacaoExtratoList.js') }}"></script>
+{% endblock %}
