--- a/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
+++ b/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
@@ -34,8 +34,8 @@
     {{ form_row(form.nome) }}
 
     {{ form_row(form.cnpj) }}
-    {{ form_row(form.razao_social) }}
-    {{ form_row(form.nome_fantasia) }}
+    {{ form_row(form.razaoSocial) }}
+    {{ form_row(form.nomeFantasia) }}
 
     {{ form_row(form.fone1) }}
     {{ form_row(form.email) }}
