--- a/templates/list.html.twig
+++ b/templates/list.html.twig
@@ -23,7 +23,7 @@
                         <i class="fas fa-search" aria-hidden="true"></i> Pesquisar
                     </button>
                     <button type="button" class="btn btn-secondary"
-                            onclick="window.location.href='{{ url(route_list) }}'">
+                            onclick="window.location.href='{{ url(route_list,{'r':'1'}) }}'">
                         <i class="fas fa-sync" aria-hidden="true"></i> Recarregar
                     </button>
                 </div>
