Config + assets/js/crosier/DatatablesJs

--- a/templates/mainmenu.html.twig
+++ b/templates/mainmenu.html.twig
@@ -264,7 +264,7 @@
                             <i class="nav-icon far fa-calendar-alt"></i>Dias Úteis</a></li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('fin_modo_list') }}">
+                        <a class="nav-link" href="{{ url('cfg_config_list') }}">
                             <i class="nav-icon fas fa-cog"></i>Parâmetros</a></li>
 
                 </ul>
