--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -9,7 +9,7 @@
 
     <div class="app-body">
 
-        {{ include('mainmenu.html.twig') }}
+        {{ render(controller('App\\Controller\\Config\\EntMenuController::getMainMenu')) }}
 
 
         <main class="main">
