--- a/templates/Config/appList.html.twig
+++ b/templates/Config/appList.html.twig
@@ -16,6 +16,13 @@
                name="filter[descricao]"
                value="{{ filter.descricao|default('') }}">
     </div>
+    <div class="form-group">
+        <label for="p_descricao">Módulo</label>
+        <input type="text"
+               class="form-control" id="filter[modulo]"
+               name="filter[modulo]"
+               value="{{ filter.modulo|default('') }}">
+    </div>
 
 {% endset %}
 
