--- a/templates/Config/mainmenu.html.twig
+++ b/templates/Config/mainmenu.html.twig
@@ -2,22 +2,22 @@
     <nav class="sidebar-nav">
         <ul class="nav">
 
-            {% for pai in pais %}
+            {% for ent in mainMenu %}
 
-                {% if pai.tipo == 'ENT' %}
+                {% if ent.pai.tipo == 'ENT' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ pai.app.route is defined ? url(pai.app.route) : '' }}">
-                            <i class="nav-icon {{ pai.icon }}"></i>{{ pai.label }}</a></li>
-                {% else %}
+                        <a class="nav-link" href="{{ ent.pai.app.route is defined ? url(ent.pai.app.route) : '' }}">
+                            <i class="nav-icon {{ ent.pai.icon }}"></i>{{ ent.pai.label }}</a></li>
+                {% elseif ent.filhos is defined %}
                     <li class="nav-item nav-dropdown">
                         <a class="nav-link nav-dropdown-toggle" href="#">
-                            <i class="nav-icon {{ pai.icon }}"></i>
-                            {{ pai.label }}
+                            <i class="nav-icon {{ ent.pai.icon }}"></i>
+                            {{ ent.pai.label }}
                         </a>
 
 
                         <ul class="nav-dropdown-items" style="background-color: black">
-                            {% for filho in pai.filhos %}
+                            {% for filho in ent.filhos %}
                                 {% if filho.tipo == 'ENT' %}
                                     <li class="nav-item" style="{{ filho.cssStyle != null ? filho.cssStyle : '' }};">
                                         <a class="nav-link" href="{{ filho.app.route ? url(filho.app.route) : '' }}">
