--- a/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
+++ b/templates/Fiscal/emissaoNFe/form_cabecalho.html.twig
@@ -36,6 +36,7 @@
     {{ form_row(form.cnpj) }}
     {{ form_row(form.razaoSocial) }}
     {{ form_row(form.nomeFantasia) }}
+    {{ form_row(form.inscricaoEstadual) }}
 
     {{ form_row(form.fone1) }}
     {{ form_row(form.email) }}
