--- a/templates/Financeiro/movimentacaoImport.html.twig
+++ b/templates/Financeiro/movimentacaoImport.html.twig
@@ -74,10 +74,15 @@
 
                         <div class="row">
                             <div class="col text-right">
-                                <button type="submit" class="btn btn-primary" value="Importar">
+                                <button type="submit" class="btn btn-primary" value="Importar" name="btnImportar">
                                     <i class="fab fa-searchengin" aria-hidden="true"></i> Importar
                                 </button>
 
+                                <button type="submit" value="Salvar" class="btn btn-warning" name="btnSalvarTodas"
+                                        data-form="movimentacao_import" data-target="#confirmationModal"
+                                        data-toggle="modal">
+                                    <i class="fas fa-save" aria-hidden="true"></i> Salvar todas
+                                </button>
                             </div>
                         </div>
 
@@ -113,7 +118,10 @@
                             <tr style="color: {{ item.categoria.codigo[0:1] == '1' ? 'blue' : 'red' }}">
                                 <th scope="row"><span data-toggle="tooltip" data-placement="top" title="{{ item.unqControle }}">{{ loop.index }}</span></th>
                                 <td>{{ item.id }}</td>
-                                <td>{{ item.carteira.descricaoMontada }}</i></td>
+                                <td>
+                                    {{ item.carteira.descricaoMontada }}
+                                    {{ item.carteiraDestino ? ('<br /> >>> ' ~ item.carteiraDestino.descricaoMontada)|raw : '' }}
+                                </td>
                                 <td>
                                     {{ item.categoria.descricaoMontada }}<br/>
                                     {{ "%02d"|format(item.modo.codigo|default('')) }} - {{ item.modo.descricao|default('') }}
