--- a/templates/Financeiro/movimentacaoImport.html.twig
+++ b/templates/Financeiro/movimentacaoImport.html.twig
@@ -78,7 +78,7 @@
                                     <i class="fab fa-searchengin" aria-hidden="true"></i> Importar
                                 </button>
 
-                                <button type="submit" value="Salvar" class="btn btn-warning" name="btnSalvarTodas"
+                                <button type="button" value="Salvar" class="btn btn-warning" name="btnSalvarTodas"
                                         data-form="movimentacao_import" data-target="#confirmationModal"
                                         data-toggle="modal">
                                     <i class="fas fa-save" aria-hidden="true"></i> Salvar todas
