--- a/templates/list.html.twig
+++ b/templates/list.html.twig
@@ -14,7 +14,7 @@
                     <h3>{{ titulo }}</h3>
                 </div>
                 <div class="col-8 text-right">
-                    <button type="button" class="btn btn-primary"
+                    <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Novo registro"
                             onclick="window.location.href='{{ url(route_form) }}'">
                         <i class="fas fa-file" aria-hidden="true"></i> Novo
                     </button>
