--- a/templates/Financeiro/movimentacaoImport.html.twig
+++ b/templates/Financeiro/movimentacaoImport.html.twig
@@ -30,7 +30,7 @@
                         <div class="form-group row">
                             <label class="col-form-label col-sm-4 form-control-label required">Tipo de Extrato</label>
                             <div class="col-sm-8">
-                                <select id="tipoExtrato" name="tipoExtrato" class="form-control"
+                                <select id="tipoExtrato" name="tipoExtrato" class="form-control" required="true"
                                         data-val="{{ tipoExtrato }}"></select>
                             </div>
                         </div>
