--- a/templates/Financeiro/movimentacaoList.html.twig
+++ b/templates/Financeiro/movimentacaoList.html.twig
@@ -106,6 +106,9 @@
         </fieldset>
     </div>
 
+    <input type="hidden" id="filter[cadeia]" name="filter[cadeia]" value="{{ filter.cadeia|default('') }}">
+    <input type="hidden" id="filter[parcelamento]" name="filter[parcelamento]" value="{{ filter.parcelamento|default('') }}">
+
 {% endset %}
 
 
