--- a/templates/Financeiro/conferenciaFinanceiro.html.twig
+++ b/templates/Financeiro/conferenciaFinanceiro.html.twig
@@ -25,8 +25,20 @@
         <div class="card-body">
             <div class="table-responsive-sm">
 
-                <table class="table table-striped table-hover display compact">
-                </table>
+                {% for list in lists %}
+
+                    <table class="table table-striped table-hover display compact">
+
+                        {% for item in list %}
+                            <tr>
+                                <td>{{ item.titulo }}</td>
+                                <td>{{ item.valor }}</td>
+                            </tr>
+                        {% endfor %}
+
+                    </table>
+
+                {% endfor %}
 
             </div>
         </div>
