--- a/templates/Financeiro/conferenciaFinanceiro.html.twig
+++ b/templates/Financeiro/conferenciaFinanceiro.html.twig
@@ -6,37 +6,61 @@
 {% block page_content %}
 
     <div class="card">
-        <div class="card-header">
+        <form action="{{ url('fin_conferencia_list') }}" method="get" id="formPesquisar">
+            <div class="card-header">
 
-            <div class="row">
-                <div class="col-4">
-                    <h3>Conferência - Financeiro</h3>
-                </div>
-                <div class="col-8 text-right">
+                <div class="row">
+                    <div class="col-4"><h3>Conferência - Financeiro</h3></div>
+                    <div class="col-8 text-right">
 
-                    <button type="button" class="btn btn-secondary"
-                            onclick="window.location.href=''">
-                        <i class="fas fa-sync" aria-hidden="true"></i> Recarregar
-                    </button>
+
+                        <button class="btn btn-outline-success"
+                                type="button" id="btn_ante"
+                                data-ante-periodoi="{{ antePeriodoI }}" data-ante-periodof="{{ antePeriodoF }}">
+                            <i class="fas fa-chevron-left"></i></button>
+
+                        <button class="btn btn-outline-success"
+                                type="button" id="btn_prox"
+                                data-prox-periodoi="{{ proxPeriodoI }}" data-prox-periodof="{{ proxPeriodoF }}">
+                            <i class="fas fa-chevron-right"></i></button>
+
+
+                        <input type="date" size="15" class="form-control" id="filter_dtUtil_i"
+                               name="filter[dtUtil][i]"
+                               style="width: 150px; float: left"
+                               value="{{ filter.dtUtil.i|default('') }}">
+                        <input type="date" size="15" class="form-control mr-1" id="filter_dtUtil_f"
+                               name="filter[dtUtil][f]"
+                               style="width: 150px; float: left"
+                               value="{{ filter.dtUtil.f|default('') }}">
+
+                        <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+                        <button class="btn btn-outline-dark" type="submit" name="btnMesAtual" id="btnMesAtual" value="true">Mês Atual</button>
+
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
 
         <div class="card-body">
             <div class="table-responsive-sm">
 
                 {% for list in lists %}
 
-                    <table class="table table-striped table-hover display compact">
+                    <div class="card">
+                        <h5 class="card-header">{{ list.titulo }}</h5>
+                        <div class="card-body">
+                            <table class="table table-striped table-hover display compact">
+                                {% for item in list.itens %}
+                                    <tr>
+                                        <td>{{ item.titulo }}</td>
+                                        <td class="text-right">{{ item.valor|number_format(2,',','.') }}</td>
+                                    </tr>
+                                {% endfor %}
 
-                        {% for item in list %}
-                            <tr>
-                                <td>{{ item.titulo }}</td>
-                                <td>{{ item.valor }}</td>
-                            </tr>
-                        {% endfor %}
-
-                    </table>
+                            </table>
+                        </div>
+                    </div>
 
                 {% endfor %}
 
@@ -73,5 +97,5 @@
 
 
 {% block down_scripts %}
-
+    <script src="{{ asset('build/fin/movimentacaoExtratoList.js') }}"></script>
 {% endblock %}
